fitur search view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Rexus Mobile</string>
+    <string name="app_name">Dext Tech</string>
     <string name="title_Home">Home</string>
     <string name="title_Cart">Cart</string>
     <string name="title_Profile">Profile</string>
