--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="title_Home">Home</string>
     <string name="title_Cart">Cart</string>
     <string name="title_Profile">Profile</string>
+
+    <string name="search_hint">Search products...</string>
+
     <style name="MenuCardStyle">
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:layout_width">match_parent</item>
